syntax = "proto3";

option go_package = "./proto;echo";

package echo;

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
}

message EchoRequest {}

message EchoResponse {
  string timestamp = 1;
  string message = 2;
  string source_ip = 3;
  string hostname = 4;
  string listener = 5;
  string node = 6;
  string grpc_method = 7;
  string http_version = 8;
  string http_method = 9;
  string http_endpoint = 10;
}
